fixing more comments

--- a/StewardClient/src/app/app.component.html
+++ b/StewardClient/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<section class="footer-section">
+<div class="footer">
   <ul>
     <li>
       <a
@@ -23,4 +23,4 @@
       >
     </li>
   </ul>
-</section>
+</div>
