--- a/StewardClient/src/app/shared/components/player-details/player-details-item/player-details-item.scss
+++ b/StewardClient/src/app/shared/components/player-details/player-details-item/player-details-item.scss
@@ -1,6 +1,6 @@
 @import '/src/variables.scss';
 
-.player-details-item-section {
+div.player-details-item {
   border-top: 1px solid rgba(0, 0, 0, 0.12);
   overflow: hidden;
 
