--- a/StewardClient/src/app/ticket-app/ticket-app.html
+++ b/StewardClient/src/app/ticket-app/ticket-app.html
@@ -1,4 +1,4 @@
-<section *ngIf="!loading">
+<div *ngIf="!loading">
   <profile [user]="profile" [parentApp]="appName"></profile>
 
   <player-details
@@ -26,7 +26,7 @@
       </mat-card-content>
     </mat-card>
   </section>
-</section>
+</div>
 <section *ngIf="loading">
   <h1>Loading...</h1>
 </section>
