moved player details to deparating based on title

--- a/StewardClient/src/app/ticket-app/ticket-app.html
+++ b/StewardClient/src/app/ticket-app/ticket-app.html
@@ -1,10 +1,26 @@
 <div *ngIf="!loading">
   <profile [user]="profile" [parentApp]="appName"></profile>
 
-  <player-details
-    [gameTitle]="gameTitle"
+  <gravity-player-details
+    *ngIf="gameTitle === gameTitleCodeNames.Street"
     [gamertag]="gamertag"
-  ></player-details>
+    (xuidFoundEvent)="xuid = $event"
+  ></gravity-player-details>
+  <sunrise-player-details
+    *ngIf="gameTitle === gameTitleCodeNames.FH4"
+    [gamertag]="gamertag"
+    (xuidFoundEvent)="xuid = $event"
+  ></sunrise-player-details>
+  <apollo-player-details
+    *ngIf="gameTitle === gameTitleCodeNames.FM7"
+    [gamertag]="gamertag"
+    (xuidFoundEvent)="xuid = $event"
+  ></apollo-player-details>
+  <opus-player-details
+    *ngIf="gameTitle === gameTitleCodeNames.FH3"
+    [gamertag]="gamertag"
+    (xuidFoundEvent)="xuid = $event"
+  ></opus-player-details>
 
   <section class="quick-actions-section">
     <mat-card>
@@ -14,6 +30,7 @@
           <section content-body>
             <div class="actions-div">
               <button
+                *ngIf="!!gamertag && !!xuid"
                 mat-raised-button
                 color="primary"
                 (click)="goToInventory()"
