move gametitle out of player-details

--- a/StewardClient/src/app/shared/components/player-details/player-details.html
+++ b/StewardClient/src/app/shared/components/player-details/player-details.html
@@ -3,7 +3,7 @@
     <mat-card-content>
       <content-collapse>
         <h2 content-title>
-          Player Details ({{gameTitle}})
+          Player Details
           <error-spinner
             [isActive]="false"
             [error]="loadError"
