--- a/StewardClient/src/app/ticket-app/ticket-app.html
+++ b/StewardClient/src/app/ticket-app/ticket-app.html
@@ -1,5 +1,7 @@
 <div *ngIf="!loading">
   <profile [user]="profile" [parentApp]="appName"></profile>
+  <h2 *ngIf="!!gameTitle">{{gameTitle}}</h2>
+  <h4 *ngIf="!!gamertag">{{gamertag}}</h4>
 
   <gravity-player-details
     *ngIf="gameTitle === gameTitleCodeNames.Street"
