--- a/StewardClient/src/app/shared/components/player-details/player-details-item/player-details-item.scss
+++ b/StewardClient/src/app/shared/components/player-details/player-details-item/player-details-item.scss
@@ -9,7 +9,8 @@ div.player-details-item {
     background-color: #f5f5f5;
   }
 
-  .player-details-item-title, .player-details-item-value {
+  .player-details-item-title,
+  .player-details-item-value {
     font-size: 16px;
     padding: 15px 5px;
     margin: 0;
@@ -19,7 +20,7 @@ div.player-details-item {
     font-weight: 600;
     float: left;
   }
-  
+
   .player-details-item-value {
     float: right;
   }
