--- a/StewardClient/src/variables-introspection.scss
+++ b/StewardClient/src/variables-introspection.scss
@@ -2,7 +2,7 @@
 // Do not import this file outside global.scss
 @import '/src/variables.scss';
 
-@debug "$app-background: " $app-background; // this is a of background-relevant colors. uncomment this line to see what's available on build.
+@debug '$app-background: ' $app-background; // this is a of background-relevant colors. uncomment this line to see what's available on build.
 // $--app-background-sample: $mat-light-theme-background;
 
 // @debug "$app-foreground: " $app-foreground; // this is a of foreground-relevant colors. uncomment this line to see what's available on build.
