--- a/StewardClient/src/app/app.component.html
+++ b/StewardClient/src/app/app.component.html
@@ -2,23 +2,17 @@
 <div class="footer">
   <ul>
     <li>
-      <a
-        href="https://privacy.microsoft.com/en-US/data-privacy-notice"
-        target="_blank"
+      <a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank"
         >Data Protection Notice</a
       >
     </li>
     <li>
-      <a
-        href="https://www.microsoft.com/en-us/servicesagreement"
-        target="_blank"
+      <a href="https://www.microsoft.com/en-us/servicesagreement" target="_blank"
         >Code of Conduct</a
       >
     </li>
     <li>
-      <a
-        href="https://www.xbox.com/en-US/legal/community-standards"
-        target="_blank"
+      <a href="https://www.xbox.com/en-US/legal/community-standards" target="_blank"
         >Community Standards for Xbox</a
       >
     </li>
