--- a/StewardClient/src/app/navbar-app/user-details/user-details.component.html
+++ b/StewardClient/src/app/navbar-app/user-details/user-details.component.html
@@ -9,12 +9,7 @@
   <span class="icon-spacer"></span>
   <mat-form-field>
     <mat-label>Gamertag</mat-label>
-    <input
-      matInput
-      type="text"
-      [(ngModel)]="gamertag"
-      (keyup.enter)="navigate()"
-    />
+    <input matInput type="text" [(ngModel)]="gamertag" (keyup.enter)="navigate()" />
     <button
       mat-button
       *ngIf="gamertag"
