--- a/StewardClient/src/app/shared/components/content-collapse/content-collapse.html
+++ b/StewardClient/src/app/shared/components/content-collapse/content-collapse.html
@@ -7,8 +7,5 @@
 >
   <fa-icon [icon]="contentCollapsed ? plusIcon : minusIcon"></fa-icon>
 </button>
-<ng-content
-  class="content-collapse-title"
-  select="[content-title]"
-></ng-content>
+<ng-content class="content-collapse-title" select="[content-title]"></ng-content>
 <ng-content *ngIf="!contentCollapsed" select="[content-body]"></ng-content>
