--- a/StewardClient/src/app/app.component.scss
+++ b/StewardClient/src/app/app.component.scss
@@ -1,28 +1,11 @@
 @import '/src/variables.scss';
 
-:host {
-  height: 100%;
-}
-
-.header-buttons {
-  border: 0px;
-  font-size: 16px;
-  background-color: transparent;
-  cursor: pointer;
-  font-weight: 500;
-  margin-right: 10px;
-
-  &:hover {
-    color: mat-color($app-primary);
-  }
-
-  &:focus {
-    outline: none;
-  }
-}
-
-.header-selected {
-  color: mat-color($app-primary);
+:host, mat-drawer-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 div.footer {
