--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
@@ -1,6 +1,7 @@
 <navbar></navbar>
 <mat-drawer-container autosize>
   <mat-drawer #drawer mode="over" [opened]="true" position="end" (closed)="clearSidebar()">
+    <pre>{{ location }}</pre>
     SIDEBAR <router-outlet name="sidebar" (activate)="drawer.open()" (deactivate)="drawer.close()"></router-outlet> SIDEBAR
   </mat-drawer>
 
