--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/user-details.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="default">
   <a
-    [routerLink]="['/navbar-app', 'user-details', 'sunrise']"
+    [routerLink]="sunriseRouterLink"
     [queryParams]="{ gamertag: gamertag }"
     mat-button
     routerLinkActive="mat-stroked-button"
