--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
@@ -2,28 +2,10 @@
 <mat-drawer-container autosize>
   <mat-drawer #drawer mode="over" [opened]="true" position="end" (closed)="clearSidebar()">
     <pre>{{ location }}</pre>
-    SIDEBAR <router-outlet name="sidebar" (activate)="drawer.open()" (deactivate)="drawer.close()"></router-outlet> SIDEBAR
+    <router-outlet name="sidebar" (activate)="drawer.open()" (deactivate)="drawer.close()"></router-outlet>
   </mat-drawer>
-
-  <router-outlet></router-outlet>
-
-  <div class="footer">
-    <ul>
-      <li>
-        <a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank"
-          >Data Protection Notice</a
-        >
-      </li>
-      <li>
-        <a href="https://www.microsoft.com/en-us/servicesagreement" target="_blank"
-          >Code of Conduct</a
-        >
-      </li>
-      <li>
-        <a href="https://www.xbox.com/en-US/legal/community-standards" target="_blank"
-          >Community Standards for Xbox</a
-        >
-      </li>
-    </ul>
+  <div class="content">
+    <router-outlet></router-outlet>
+    <data-privacy-notice></data-privacy-notice>
   </div>
 </mat-drawer-container>
