--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
@@ -1,5 +1,32 @@
 @import '/src/variables.scss';
 
+:host {
+  display: flex;
+  flex-grow: 1;
+  flex-flow: column nowrap;
+  height: 100%;
+}
+
+mat-drawer-container {
+  flex-grow: 1;
+}
+
+// this is an implicit element, so we have to use ::ng-deep
+:host ::ng-deep mat-drawer-content {
+  display: flex;
+  flex-flow: column nowrap;
+  min-height: 100%;
+}
+
+.content {
+  flex-grow: 1;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+// grow only the transcluded content
+:host ::ng-deep .content > router-outlet + * { flex-grow: 1; }
+
 div {
   padding: 10px;
 }
@@ -23,4 +50,8 @@ div {
 
 .header-selected {
   color: mat-color($app-primary);
+}
+
+mat-drawer {
+  padding: 1rem 2rem;
 }
