--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.html
@@ -2,7 +2,11 @@
 <mat-drawer-container autosize>
   <mat-drawer #drawer mode="over" [opened]="true" position="end" (closed)="clearSidebar()">
     <pre>{{ location }}</pre>
-    <router-outlet name="sidebar" (activate)="drawer.open()" (deactivate)="drawer.close()"></router-outlet>
+    <router-outlet
+      name="sidebar"
+      (activate)="drawer.open()"
+      (deactivate)="drawer.close()"
+    ></router-outlet>
   </mat-drawer>
   <div class="content">
     <router-outlet></router-outlet>
