--- a/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.html
+++ b/StewardClient/src/app/pages/navbar-app/components/navbar/navbar.component.html
@@ -3,7 +3,12 @@
   <a [routerLink]="homeRouterLink" mat-icon-button routerLinkActive="mat-stroked-button">
     <mat-icon>home</mat-icon>
   </a>
-  <a *ngFor="let item of items" mat-button [routerLink]="item.routerLink" routerLinkActive="mat-stroked-button">
+  <a
+    *ngFor="let item of items"
+    mat-button
+    [routerLink]="item.routerLink"
+    routerLinkActive="mat-stroked-button"
+  >
     {{ item.title }}
   </a>
   <a mat-button [routerLink]="['/missing-no']">404</a>
@@ -17,9 +22,14 @@
   </span>
   <span class="short-spacer"></span>
   <span>
-    <a [routerLink]="[{outlets: { sidebar: 'profile'}}]" queryParamsHandling="preserve" mat-icon-button
-      routerLinkActive="mat-stroked-button" aria-label="Profile">
+    <a
+      [routerLink]="[{ outlets: { sidebar: 'profile' } }]"
+      queryParamsHandling="preserve"
+      mat-icon-button
+      routerLinkActive="mat-stroked-button"
+      aria-label="Profile"
+    >
       <fa-icon icon="user" class="profile-icon"></fa-icon>
-  </a>
+    </a>
   </span>
 </mat-toolbar>
