--- a/StewardClient/src/app/shared/views/data-privacy-notice/data-privacy-notice.component.html
+++ b/StewardClient/src/app/shared/views/data-privacy-notice/data-privacy-notice.component.html
@@ -1,11 +1,15 @@
 <ul>
   <li>
-    <a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank">Data Protection Notice</a>
+    <a href="https://privacy.microsoft.com/en-US/data-privacy-notice" target="_blank"
+      >Data Protection Notice</a
+    >
   </li>
   <li>
     <a href="https://www.microsoft.com/en-us/servicesagreement" target="_blank">Code of Conduct</a>
   </li>
   <li>
-    <a href="https://www.xbox.com/en-US/legal/community-standards" target="_blank">Community Standards for Xbox</a>
+    <a href="https://www.xbox.com/en-US/legal/community-standards" target="_blank"
+      >Community Standards for Xbox</a
+    >
   </li>
 </ul>
