--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/gamertags/gamertags.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/gamertags/gamertags.component.html
@@ -21,7 +21,7 @@
           <th mat-header-cell *matHeaderCellDef>Gamertag</th>
           <td mat-cell *matCellDef="let entry">
             <a
-              [routerLink]="['/navbar-app', 'user-details', 'sunrise']"
+              [routerLink]="sunriseRouterLink"
               [queryParams]="{ gamertag: entry.gamertag }"
             >
               {{ entry.gamertag }}
