--- a/StewardClient/src/app/pages/error/error.component.html
+++ b/StewardClient/src/app/pages/error/error.component.html
@@ -1,1 +1,5 @@
+<ul>
+  <li><a routerLink="/navbar-app/tools/home">Navbar App Tools</a></li>
+  <li><a routerLink="/ticket-app/">Ticket App</a></li>
+</ul>
 <four-oh-four></four-oh-four>
