--- a/StewardClient/src/app/pages/auth/login/login.component.scss
+++ b/StewardClient/src/app/pages/auth/login/login.component.scss
@@ -1,6 +1,22 @@
 @import "/src/variables.scss";
 
 :host {
-  padding: $gap-vertical-layout $gap-side-gutter;
+  margin: $gap-vertical-layout $gap-side-gutter;
   text-align: center;
+}
+
+mat-card {
+  margin: $gap-vertical-layout $gap-side-gutter;
+  text-align: left;
+  max-width: 75%;
+  pre {
+    white-space: pre-wrap;
+  }
+}
+
+.center-message {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
 }
