--- a/StewardClient/src/app/pages/auth/logout/logout.component.html
+++ b/StewardClient/src/app/pages/auth/logout/logout.component.html
@@ -1,4 +1,8 @@
-<h1>Logout</h1>
-<p>
-  You should be redirected to a logout page. If you are not, <a [routerLink]="" (click)="logout()">click here to try again</a>
-</p>
+<center-contents>
+  <mat-card>
+    <h1>Logout</h1>
+    <p>
+      You should be redirected to a logout page. If you are not, <a [routerLink]="" (click)="logout()">click here to try again</a>
+    </p>
+  </mat-card>
+</center-contents>
