--- a/StewardClient/src/app/pages/auth/aad-logout/aad-logout.component.html
+++ b/StewardClient/src/app/pages/auth/aad-logout/aad-logout.component.html
@@ -1,1 +1,7 @@
-<p>aad-logout works!</p>
+<center-contents>
+  <mat-card>
+    <h1>You are now logged out.</h1>
+    <p>You should be redirected automatically in a few seconds.</p>
+    <p>If you are not redirected, <a [routerLink]="'/'">click here to to go to the home page</a>.</p>
+  </mat-card>
+</center-contents>
