--- a/StewardClient/src/app/pages/home/home.component.html
+++ b/StewardClient/src/app/pages/home/home.component.html
@@ -1,8 +1,7 @@
-<four-oh-four></four-oh-four>
-
 <center-contents>
   <mat-card>
-    <h1>You probably want one of these</h1>
+    <h1>Welcome to Steward</h1>
+    <p>You probably want one of these</p>
     <ul>
       <li><a routerLink="/navbar-app/tools/home">Navbar App Tools</a></li>
       <li><a routerLink="/ticket-app/">Ticket App</a></li>
