--- a/StewardClient/src/app/shared/views/four-oh-four/four-oh-four.component.html
+++ b/StewardClient/src/app/shared/views/four-oh-four/four-oh-four.component.html
@@ -1,5 +1,6 @@
-<main class="center-message">
+<center-contents>
   <h1>404</h1>
   <p>This page does not exist.</p>
+  <pre>{{ location }}</pre>
   <img src="https://placedog.net/640/480?random" />
-</main>
+</center-contents>
