--- a/StewardClient/src/app/shared/views/stuck/stuck.component.html
+++ b/StewardClient/src/app/shared/views/stuck/stuck.component.html
@@ -1,7 +1,7 @@
-<main class="center-message" *ngIf="shouldShow$ | async">
+<center-contents *ngIf="shouldShow$ | async">
   <mat-card>
     <h1>Ooops you seem to be stuck</h1>
     <p>If you're seeing this page, please let us know!</p>
     <img src="https://placedog.net/640/480?random" />
   </mat-card>
-</main>
+</center-contents>
