--- a/StewardClient/src/app/pages/auth/aad-login/aad-login.component.html
+++ b/StewardClient/src/app/pages/auth/aad-login/aad-login.component.html
@@ -1,9 +1,7 @@
 <center-contents>
   <mat-card>
     <h1>You are now logged in.</h1>
-    <p>
-      You may close this window.
-    </p>
-    <img src="https://placedog.net/640/480?random">
+    <p>You may close this window.</p>
+    <img src="https://placedog.net/640/480?random" />
   </mat-card>
 </center-contents>
