--- a/StewardClient/src/app/pages/auth/login/login.component.html
+++ b/StewardClient/src/app/pages/auth/login/login.component.html
@@ -2,7 +2,8 @@
   <mat-card>
     <h1>Login</h1>
     <p>
-      If you do not see the login popup, <a [routerLink]="" (click)="login$()">click here to try again</a>
+      If you do not see the login popup,
+      <a [routerLink]="" (click)="login$()">click here to try again</a>
     </p>
   </mat-card>
 </center-contents>
