--- a/StewardClient/src/app/pages/auth/logout/logout.component.html
+++ b/StewardClient/src/app/pages/auth/logout/logout.component.html
@@ -2,7 +2,8 @@
   <mat-card>
     <h1>Logout</h1>
     <p>
-      You should be redirected to a logout page. If you are not, <a [routerLink]="" (click)="logout()">click here to try again</a>
+      You should be redirected to a logout page. If you are not,
+      <a [routerLink]="" (click)="logout()">click here to try again</a>
     </p>
   </mat-card>
 </center-contents>
