fix small authflow issue and add additional copy access tokent o clipboard when in dev mode

--- a/StewardClient/src/app/sidebars/profile/profile.component.html
+++ b/StewardClient/src/app/sidebars/profile/profile.component.html
@@ -1,3 +1,4 @@
+<button *ngIf="isDevEnvironment" (click)="copyAccessToken()">Copy Access Token</button>
 <pre>
 Email: {{ user?.emailAddress }}
 Role: {{ user?.role }}
