--- a/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/navbar-app.component.scss
@@ -58,6 +58,7 @@ div {
   color: mat-color($app-primary);
 }
 
-mat-drawer {
+:host ::ng-deep mat-drawer > * {
+  box-sizing: border-box;
   padding: 1rem 2rem;
 }
