--- a/StewardClient/src/app/sidebars/settings/settings.component.html
+++ b/StewardClient/src/app/sidebars/settings/settings.component.html
@@ -1,7 +1,11 @@
 <section>
   <h1>Settings</h1>
-  <mat-slide-toggle [(ngModel)]="enableFakeApi" (ngModelChange)="syncSettings()"
+  <mat-slide-toggle
+    [(ngModel)]="enableFakeApi"
+    (ngModelChange)="syncSettings()"
     matTooltip="The Fake API overrides calls to the backing service with fake data. User Authentication is not overridden."
-    matTooltipPosition="after">
-    Fake API</mat-slide-toggle>
+    matTooltipPosition="after"
+  >
+    Fake API</mat-slide-toggle
+  >
 </section>
