updated UI so it doesnt break

--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/ban-history/ban-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/ban-history/ban-history.component.html
@@ -58,18 +58,13 @@
               </ng-container>
             </div>
           </td>
-        </ng-container> 
+        </ng-container> -->
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
         <tr
           mat-row
           *matRowDef="let element; columns: columnsToDisplay"
           class="element-row"
-          [class.expanded-row]="expandedEntry === element"
-          (click)="expandedEntry = expandedEntry === element ? null : element"
         ></tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="detail-row">
-          <
-        </tr>-->
       </table>
     </ng-container>
   </mat-card-content>
