--- a/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/ban-history/ban-history.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-details/sunrise/ban-history/ban-history.component.html
@@ -60,11 +60,7 @@
           </td>
         </ng-container> -->
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr
-          mat-row
-          *matRowDef="let element; columns: columnsToDisplay"
-          class="element-row"
-        ></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay" class="element-row"></tr>
       </table>
     </ng-container>
   </mat-card-content>
