--- a/StewardClient/src/app/pages/ticket-app/ticket-app.component.scss
+++ b/StewardClient/src/app/pages/ticket-app/ticket-app.component.scss
@@ -1,12 +1,3 @@
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-.ticket-info-item {
-  width: 100%;
-}
 
 h1,
 h2 {
@@ -14,7 +5,7 @@ h2 {
   margin: 0px;
 }
 
-.actions-div {
+div.actions {
   width: 100%;
   margin-top: 20px;
 
@@ -23,6 +14,6 @@ h2 {
   }
 }
 
-.quick-actions-section {
+section.quick-actions {
   margin-top: 20px;
 }
